--- a/common/common.scss
+++ b/common/common.scss
@@ -1885,6 +1885,15 @@ button.save-fast-edit {
     #modal-alert {
       border-radius: var(--d-default-border-radius) var(--d-default-border-radius) 0 0;
       margin: 0;
+      .desktop-view & {
+        position: absolute;
+        padding: 0.75em 3.5em 0.75em 1em;
+      }
+    }
+    .modal-body {
+      &.has-alt-auth {
+        border-radius: var(--d-default-border-radius);
+      }
     }
   }
 }
