Alternative Voting Category Style Compatibility

--- a/common/common.scss
+++ b/common/common.scss
@@ -2340,3 +2340,15 @@ input.channel-members-view__search-input,
     padding: 0.25em 0;
   }
 }
+
+// Alternative Voting Category Style
+
+// Topic Voting
+
+.title-voting {
+  padding-top: 0;
+}
+.vote-count-wrapper,
+.voting-popup-menu {
+  border-radius: var(--d-default-border-radius);
+}
