FIX: Add Discourse Ad - Adsense support

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1045,3 +1045,20 @@ body.user-activity-page .bookmark-list-wrapper {
     }
   }
 }
+
+// Discourse Ad Plugin - Google Adsense Support
+
+.google-adsense {
+  .google-adsense-label {
+    width: 100%;
+  }
+  .google-adsense-content {
+    width: 100% !important;
+    ins.adsbygoogle {
+      width: 100% !important;
+      div#aswift_0_host {
+        width: 100% !important;
+      }
+    }
+  }
+}
