--- a/common/common.scss
+++ b/common/common.scss
@@ -1829,17 +1829,20 @@ button.save-fast-edit {
 .d-modal {
   &.create-account,
   &.login-modal {
-    #modal-alert {
+    .alert {
       border-radius: var(--d-default-border-radius) var(--d-default-border-radius) 0 0;
       margin: 0;
-      .desktop-view & {
-        padding: 0.75em 3.5em 0.75em 1em;
-      }
+      + div {
+        > .modal-body {
+          border-radius: 0 0 var(--d-default-border-radius) var(--d-default-border-radius);
+          .login-left-side {
+            border-radius: 0 var(--d-default-border-radius) var(--d-default-border-radius) var(--d-default-border-radius);
+          }
+        }
+      } 
     }
     .modal-body {
-      &.has-alt-auth {
-        border-radius: var(--d-default-border-radius);
-      }
+      border-radius: var(--d-default-border-radius);
     }
   }
 }
