--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -293,3 +293,15 @@
     margin: 8px 0;
   }
 }
+
+// Alternative Voting Category Style
+
+// Topic Voting
+
+.title-voting {
+  padding-top: 0;
+}
+.vote-count-wrapper,
+.voting-popup-menu {
+  border-radius: var(--d-default-border-radius);
+}
