--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -1,17 +1,17 @@
 @import "var-mixin";
 
-@import "fkb-m-header";
+@import "mobile/fkb-m-header";
 
-@import "fkb-m-login";
-@import "fkb-m-user";
-@import "fkb-m-body-pages";
+@import "mobile/fkb-m-login";
+@import "mobile/fkb-m-user";
+@import "mobile/fkb-m-body-pages";
 
-@import "fkb-m-category";
-@import "fkb-m-topic-list";
-@import "fkb-m-sticky-new-topic-banner";
-@import "fkb-m-topic";
-@import "fkb-m-private-message";
-@import "fkb-m-composer";
+@import "mobile/fkb-m-category";
+@import "mobile/fkb-m-topic-list";
+@import "mobile/fkb-m-sticky-new-topic-banner";
+@import "mobile/fkb-m-topic";
+@import "mobile/fkb-m-private-message";
+@import "mobile/fkb-m-composer";
 
-@import "fkb-m-docs";
-@import "fkb-m-chat";
+@import "mobile/fkb-m-docs";
+@import "mobile/fkb-m-chat";
