--- a/scss/desktop/fkb-d-user.scss
+++ b/scss/desktop/fkb-d-user.scss
@@ -37,7 +37,7 @@
 .new-user-wrapper {
   .new-user-content-wrapper {
     .user-content {
-      padding: 1em;
+      padding: 0 1em;
     }
   }
 }
