--- a/scss/common/fkb-c-user.scss
+++ b/scss/common/fkb-c-user.scss
@@ -71,6 +71,7 @@ h2.username,
     margin-top: 2em;
     .user-navigation-secondary {
       padding: 0 1em;
+      border-bottom: none;
     }
   }
   .topic-list {
