--- a/scss/common/fkb-c-user.scss
+++ b/scss/common/fkb-c-user.scss
@@ -73,6 +73,9 @@ h2.username,
       padding: 0 1em;
       border-bottom: none;
     }
+    .user-content {
+      padding: 1em;
+    }
   }
   .topic-list {
     .main-link {
