--- a/scss/mobile/fkb-m-user.scss
+++ b/scss/mobile/fkb-m-user.scss
@@ -24,7 +24,7 @@
     }
   }
   .user-content {
-    background: tranparent;
+    background: transparent;
     .bulk-select.btn {
       display: none;
     }
