--- a/scss/common/fkb-c-user.scss
+++ b/scss/common/fkb-c-user.scss
@@ -69,6 +69,7 @@ h2.username,
   .new-user-content-wrapper {
     @include bg-br;
     margin-top: 1em;
+    min-height: 265px;
     .user-navigation-secondary {
       padding: 0 1em;
       border-bottom: none;
