--- a/scss/common/fkb-c-user.scss
+++ b/scss/common/fkb-c-user.scss
@@ -74,6 +74,10 @@ h2.username,
       padding: 0 1em;
       border-bottom: none;
     }
+    .spinner {
+      margin: auto;
+      top: 1em;
+    }
     .user-content {
       padding: 1em;
     }
