--- a/scss/common/fkb-c-user.scss
+++ b/scss/common/fkb-c-user.scss
@@ -85,6 +85,7 @@ h2.username,
   .topic-list {
     .main-link {
       border: 1px solid var(--primary-low);
+      box-shadow: none;
     }
   }
 }
