--- a/common/common.scss
+++ b/common/common.scss
@@ -3,6 +3,7 @@
 @import "common/fkb-c-global";
 @import "common/fkb-c-input";
 @import "common/fkb-c-header";
+@import "common/fkb-c-sidebar";
 
 @import "common/fkb-c-login";
 @import "common/fkb-c-user";
