--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -153,13 +153,35 @@
         margin-top: 1em;
       }
       .topic-image {
-        height: 300px;
-        @media (min-height: 790px) {
-          height: 340px;
-        }
-        overflow-y: hidden;
+        position: relative;
+        height: #{$topic_image_height};
+        overflow: hidden;
         width: calc(100% + 2em);
         margin: 0.25em -1em 0 -1em;
+        &__backdrop {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: cover;          
+          filter: blur(#{$topic_image_backdrop_blur}) brightness(#{$topic_image_backdrop_brightness});
+          transform: scale(2);
+        }
+        &__img {
+          position: relative;
+          width: 100%;
+          height: 100%;
+          @if ($topic_image_fit == contain) {
+            object-fit: contain;
+          }
+          @if ($topic_image_fit == scale-down) {
+            object-fit: scale-down;
+          }
+          @if ($topic_image_fit == cover) {
+            object-fit: cover;
+          }
+        }
       }
       .topic-excerpt {
         font-size: var(--font-0-rem);
@@ -242,25 +264,8 @@
 }
 
 #show-tag-info {
-  body:not(.has-sidebar-page) & {
+  body:not(.mobile-view):not(.has-sidebar-page) & {
     margin: 0.5em 0;
-  }
-  .mobile-view & {
-    position: absolute;
-    bottom: 1em;
-    left: 3.65em;
-    order: 0;
-    margin-bottom: 0;
-    margin-top: 0;
-    @media screen and (max-width: 600px) {
-      bottom: 0.5em;
-    }
-    @media screen and (max-height: 410px) and (orientation: landscape) {
-      position: relative;
-      bottom: 0;
-      left: 0;
-      margin-right: 0.5em;
-    }
   }
 }
 
