--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -172,6 +172,9 @@
           position: relative;
           width: 100%;
           height: 100%;
+          @if ($topic_image_fit == none) {
+            object-fit: none;
+          }       
           @if ($topic_image_fit == contain) {
             object-fit: contain;
           }
