--- a/javascripts/discourse/templates/tag/show.hbs
+++ b/javascripts/discourse/templates/tag/show.hbs
@@ -126,6 +126,19 @@
                 {{/if}}
               {{/if}}
 
+              {{#unless this.bulkSelectEnabled}}
+                {{#if
+                  (and this.showTopicsAndRepliesToggle this.site.mobileView)
+                }}
+                  <NewListHeaderControlsWrapper
+                    @current={{this.subset}}
+                    @newRepliesCount={{this.newRepliesCount}}
+                    @newTopicsCount={{this.newTopicsCount}}
+                    @changeNewListSubset={{action "changeNewListSubset"}}
+                  />
+                {{/if}}
+              {{/unless}}              
+
               {{#if this.list.topics}}
                 <TopicList
                   @topics={{this.list.topics}}
