--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -14,5 +14,6 @@
 @import "desktop/fkb-d-topic";
 
 @import "desktop/fkb-d-right-sidebar-blocks";
+@import "desktop/fkb-d-topic-ratings";
 @import "desktop/fkb-d-ads";
 @import "desktop/fkb-d-chat";
