--- a/common/common.scss
+++ b/common/common.scss
@@ -20,3 +20,4 @@
 @import "common/fkb-c-chat";
 @import "common/fkb-c-docs";
 @import "common/fkb-c-alternative-voting-category";
+@import "common/fkb-c-kanban";
